base/falco/networkpolicies/falco-sidekick-ui.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: falco-sidekick-ui
  namespace: falco-system
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: falcosidekick-ui
      app.kubernetes.io/instance: falco-ui
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: traefik
            app.kubernetes.io/name: traefik
            io.kubernetes.pod.namespace: traefik
      toPorts:
        - ports:
            - port: "2802"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toServices:
        - k8sService:
            serviceName: falco-falcosidekick-ui-redis
            namespace: falco-system
      toPorts:
        - ports:
            - port: "6379"
              protocol: TCP
    - toServices:
        - k8sService:
            serviceName: kube-prometheus-stack-alertmanager
            namespace: monitoring
      toPorts:
        - ports:
            - port: "9093"
              protocol: TCP
