base/falco/networkpolicies/falco-sidekick.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: falco-sidekick
  namespace: falco-system
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: falcosidekick
      app.kubernetes.io/instance: falco
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toServices:
        - k8sService:
            serviceName: falco-falcosidekick-ui
            namespace: falco-system
      toPorts:
        - ports:
            - port: "2802"
              protocol: TCP
    - toServices:
        - k8sService:
            serviceName: kube-prometheus-stack-alertmanager
            namespace: monitoring
      toPorts:
        - ports:
            - port: "9093"
              protocol: TCP
