base/falco/networkpolicies/redis.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: redis
  namespace: flux-system
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: falcosidekick-ui-redis
      app.kubernetes.io/instance: falco-ui-redis
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: falcosidekick-ui
            app.kubernetes.io/instance: falco-ui
      toPorts:
        - ports:
            - port: "6379"
              protocol: TCP
