base/falco/networkpolicies/traefik-egress-falco-sidekick-ui.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: traefik-egress-falco-sidekick-ui
  namespace: traefik
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: traefik
      app.kubernetes.io/name: traefik
  egress:
    - toServices:
        - k8sService:
            serviceName: falco-falcosidekick-ui
            namespace: falco-system
      toPorts:
        - ports:
            - port: "2802"
              protocol: TCP
